Avoid wrapping button text
ssbc/patchwork#400

--- a/styles.less
+++ b/styles.less
@@ -70,6 +70,7 @@
   .btn {
     padding: 10px 50px;
     font-size: 18px;
+    white-space: nowrap;
   }
 
   &.center-block {
